@@ -123,7 +123,8 @@ typedef enum
   PT_ERROR,
   PT_BOOL,
   PT_TEXT,
-  PT_INTEGER,
+  PT_INT,
+  PT_UINT,
   PT_BITLIST,
   PT_INTLIST,
   PT_OPTION,
